apps/overseerr/service.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/refs/heads/master/master/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  labels:
    app.kubernetes.io/name: overseerr
spec:
  type: ClusterIP
  publishNotReadyAddresses: false
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: overseerr
