apps/overseerr/httpproxy.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/projectcontour.io/httpproxy_v1.json
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: overseerr-overseerr-ingress
  namespace: overseerr
spec:
  virtualhost:
    fqdn: overseerr.swifthomelab.net
    tls:
      secretName: cert-manager/overseerr-swifthomelab-net
  includes:
  - name: main
    namespace: overseerr
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/projectcontour.io/httpproxy_v1.json
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: overseerr-request-ingress
  namespace: overseerr
spec:
  virtualhost:
    fqdn: request.swifthomelab.net
    tls:
      secretName: cert-manager/overseerr-swifthomelab-net
  includes:
  - name: main
    namespace: overseerr
