apps/overseerr/route.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/projectcontour.io/httpproxy_v1.json
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: main
  namespace: overseerr
spec:
  routes:
  - services:
    - name: overseerr
      port: 80
